# um2zarr

./: LICENSE  README.md  config.example.yaml  convert_to_zarr.py  pyproject.toml  requirements.txt
legacy/: README.md  convert_to_netcdf.py  stashvar_cmip6.py  um2nc.py  um2netcdf4.py
um2zarr/: README.md  __init__.py
um2zarr/core/: data_structures.py
um2zarr/io/: __init__.py  catalogue_writer.py  um_reader.py  um_reader_simple.py  zarr_writer.py
um2zarr/orchestration/: __init__.py  checkpoint.py  cli.py  dask_integration.py  dask_workers.py
um2zarr/processing/: __init__.py  chunk_manager.py  cmor_processor.py  coordinate_processor.py  data_processing.py  dtype_optimizer.py  iris_converter.py  masking_engine.py  rechunker.py  stash_metadata.py
um2zarr/utils/: __init__.py  numpy_compat.py
